--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+/* Importing the Figtree font from Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&display=swap");
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+/* Defining the Grifter font */
+@font-face {
+  font-family: "Grifter";
+  src: url("/fonts/GRIFTER Bold 700.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
 }
